got first question to show after start button pressed

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
             incorrectly, your time will be reduced by 10 seconds.</p>
         <button id="start-quiz" class="btn">Start Quiz</button>
     </div>
-    <div class="q">
+    <div class="quiz-body" id="q-body">
         <h2 id="question"></h2>
-        <button id="answers"> </button>
+        <button id="answer1" class="btn"> </button>
+        <button id="answer2" class="btn"></button>
+        <button id="answer3" class="btn"></button>
+        <button id="answer4" class="btn"></button>
+        
     </div>
     <script src="./js/script.js"></script>
 </body>
